# sucher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: README.md  make-gif.sh  make-keynote-preview.py  make-social.py  make-testcard.py
docs/adr/: 0001-file-classification-and-viewers.md  0002-typeahead-vs-vim-motion.md  0003-runtime-theme-and-config.md  0004-browser-navigation-and-signal-polish.md  0005-animated-images-and-pointer-input.md  0006-navigation-animations.md  0007-recursive-search.md  0008-html-rendering.md  0009-bounded-decoders.md  0010-viewer-trait-and-registry.md  0011-theme-reaches-all-viewers.md  0012-decompose-browser-app.md  0013-blocking-workbook-load.md  0014-open-in-native-app.md  0015-pdfium-rendering.md  0016-data-files-duckdb.md
samples/: app.db  book.epub  code.rs  config.yaml  data.csv  data.json  data.tsv  deck.pptx  events.jsonl  notebook.ipynb  notes.txt  page.html  sales.parquet  sample.docx  sample.md  sample.xlsx  slides.key
src/: anim.rs  archive.rs  config.rs  data.rs  dir.rs  docx.rs  epub.rs  format.rs  git.rs  hex.rs  highlight.rs  html.rs  icons.rs  imgview.rs  ipynb.rs  keynote.rs  main.rs  markdown.rs  media.rs  pdf.rs  pdfium.rs  plain.rs  pptx.rs  query.rs  search.rs  sheet.rs  svg.rs  text.rs  theme.rs  tui.rs  typeahead.rs  util.rs  video.rs  xlsx.rs
