[package]
name = "sucher"
version = "0.2.0"
edition = "2021"
authors = ["Jonathan Kaleve <jonathan.kaleve@gmail.com>"]
description = "A fast terminal viewer for files that are awkward in a browser: markdown, spreadsheets, PDF, images, video, docx, pptx, Keynote, archives and binary."
license = "MIT"
readme = "README.md"
repository = "https://github.com/john-athan/sucher"
keywords = ["tui", "viewer", "markdown", "pdf", "spreadsheet"]
categories = ["command-line-utilities", "visualization"]
exclude = ["assets/", ".github/", "docs/", "Makefile"]

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
pulldown-cmark = "0.13"
ratatui = "0.30"
crossterm = "0.29"
calamine = "0.35"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
zip = "8"
quick-xml = "0.41"
flate2 = "1"
tar = "0.4"
resvg = "0.47"
toml = "0.8"
dirs = "6"
serde = { version = "1", features = ["derive"] }
# Recursive search (ADR 0007): ripgrep's own walker + line searcher.
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"

[[bin]]
name = "sucher"
path = "src/main.rs"
