[package]
name = "sucher"
version = "0.5.0"
edition = "2021"
authors = ["Jonathan Kaleve <jonathan.kaleve@gmail.com>"]
description = "A fast terminal viewer for files that are awkward in a browser: markdown, spreadsheets, PDF, images, video, docx, pptx, Keynote, archives and binary."
license = "MIT"
readme = "README.md"
repository = "https://github.com/john-athan/sucher"
keywords = ["tui", "viewer", "markdown", "pdf", "spreadsheet"]
categories = ["command-line-utilities", "visualization"]
exclude = ["assets/", ".github/", "docs/", "Makefile"]

[features]
# `data` (default-on) is the DuckDB-backed data-file family — Parquet, JSONL,
# SQLite, DuckDB (ADR 0016). It bundles DuckDB (a C++ build; ~30 MB of binary),
# so `cargo install --no-default-features` yields the lean ~26 MB viewer without
# it. `cargo install sucher` gets it.
default = ["data"]
data = ["dep:duckdb"]

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
pulldown-cmark = "0.13"
ratatui = "0.30"
crossterm = "0.29"
calamine = "0.36"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
zip = "8"
quick-xml = "0.41"
flate2 = "1"
tar = "0.4"
resvg = "0.47"
toml = "1.1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
# Jupyter notebook (.ipynb) parsing — a JSON document of cells.
serde_json = "1"
# Recursive search (ADR 0007): ripgrep's own walker + line searcher.
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
# HTML → markdown (ADR 0008): a real HTML5 parser, not the XML reader.
html5ever = "0.39"
markup5ever_rcdom = "0.39"
# PDF rendering via pdfium (ADR 0015): Chrome's PDF engine, ~100× faster than
# shelling to poppler on scanned pages. The library is loaded at *runtime* (never
# linked), so this dep only pulls in the binding layer. `build.rs` fetches the
# pinned libpdfium for the target and embeds it in the binary (materialised to a
# cache dir on first use), so `cargo install sucher` is self-contained; poppler
# remains the fallback when embedding is skipped.
pdfium-render = "0.8.37"
# Data files (ADR 0016): Parquet, JSONL, SQLite, DuckDB behind one embedded SQL
# engine. `bundled` compiles DuckDB from vendored source (no build-time download,
# no runtime network), so `cargo install sucher` is self-contained. Optional and
# default-on via the `data` feature; every connection runs with
# `autoinstall_known_extensions=false` so reading a data file never touches the
# network — the offline guarantee is enforced, not assumed.
duckdb = { version = "1", features = ["bundled"], optional = true }

# build.rs: fetch (curl) + checksum (sha2) + unpack (flate2/tar) the pinned
# libpdfium for the build target. flate2/tar mirror the runtime deps' versions.
[build-dependencies]
sha2 = "0.10"
flate2 = "1"
tar = "0.4"

[[bin]]
name = "sucher"
path = "src/main.rs"
